--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/4_query_and_QA_sqldb_from_csv.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/4_query_and_QA_sqldb_from_csv.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Create a test sql database from titanic dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "https://python.langchain.com/docs/use_cases/sql/csv/"
    ]
   },
@@ -19,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,18 +144,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "887"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_community.utilities import SQLDatabase\n",
     "from sqlalchemy import create_engine\n",
@@ -455,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -478,9 +474,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/farzad_rzt/python_env/sql-rag-gpt/lib/python3.10/site-packages/langchain_core/_api/deprecation.py:119: LangChainDeprecationWarning: The class `AzureChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.2.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import AzureChatOpenAI`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.chat_models import AzureChatOpenAI\n",
     "\n",
@@ -496,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +511,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SQL Agent Executor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `sql_db_list_tables` with `{}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[38;5;200m\u001b[1;3mtitanic\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `sql_db_schema` with `{'table_names': 'titanic'}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3m\n",
+      "CREATE TABLE titanic (\n",
+      "\t\"Survived\" BIGINT, \n",
+      "\t\"Pclass\" BIGINT, \n",
+      "\t\"Name\" TEXT, \n",
+      "\t\"Sex\" TEXT, \n",
+      "\t\"Age\" FLOAT, \n",
+      "\t\"Siblings/Spouses Aboard\" BIGINT, \n",
+      "\t\"Parents/Children Aboard\" BIGINT, \n",
+      "\t\"Fare\" FLOAT\n",
+      ")\n",
+      "\n",
+      "/*\n",
+      "3 rows from titanic table:\n",
+      "Survived\tPclass\tName\tSex\tAge\tSiblings/Spouses Aboard\tParents/Children Aboard\tFare\n",
+      "0\t3\tMr. Owen Harris Braund\tmale\t22.0\t1\t0\t7.25\n",
+      "1\t1\tMrs. John Bradley (Florence Briggs Thayer) Cumings\tfemale\t38.0\t1\t0\t71.2833\n",
+      "1\t3\tMiss. Laina Heikkinen\tfemale\t26.0\t0\t0\t7.925\n",
+      "*/\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `sql_db_query` with `{'query': \"SELECT * FROM titanic WHERE Name LIKE '%Anders Johan Andersson%'\"}`\n",
+      "responded: Based on the schema of the \"titanic\" table, we have the following columns:\n",
+      "\n",
+      "- Survived: Indicates whether the passenger survived (0 = No, 1 = Yes)\n",
+      "- Pclass: Passenger class (1 = 1st, 2 = 2nd, 3 = 3rd)\n",
+      "- Name: Passenger's name\n",
+      "- Sex: Passenger's sex (male or female)\n",
+      "- Age: Passenger's age\n",
+      "- Siblings/Spouses Aboard: Number of siblings/spouses aboard\n",
+      "- Parents/Children Aboard: Number of parents/children aboard\n",
+      "- Fare: Fare paid by the passenger\n",
+      "\n",
+      "Now, let's query the table to find more information about Anders Johan Andersson.\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[(0, 3, 'Mr. Anders Johan Andersson', 'male', 39.0, 1, 5, 31.275)]\u001b[0m\u001b[32;1m\u001b[1;3mAnders Johan Andersson was a male passenger on the Titanic. He was 39 years old and traveled in third class. He had 1 sibling/spouse aboard and 5 parents/children aboard. The fare he paid was 31.275.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'Tell me more about Anders Johan Andersson',\n",
+       " 'output': 'Anders Johan Andersson was a male passenger on the Titanic. He was 39 years old and traveled in third class. He had 1 sibling/spouse aboard and 5 parents/children aboard. The fare he paid was 31.275.'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_executor.invoke({\"input\": \"Tell me more about Anders Johan Andersson\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +637,7 @@
        " 'output': 'The average age of the survivors is approximately 28.41 years.'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
