--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/5_RAG_with_tabular_data.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/5_RAG_with_tabular_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "4    male   35                        0                        0   8.0500  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,11 +381,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_texts = \"I need more info about Owen Harris\"\n",
+    "query_texts = \"what's the average age of survivors\"\n",
     "response = azure_client.embeddings.create(\n",
     "        input = query_texts,\n",
     "        model= \"text-embedding-ada-002\"\n",
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "30"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,22 +423,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ids': [['id0']],\n",
-       " 'distances': [[0.4056195393341294]],\n",
+       "{'ids': [['id13']],\n",
+       " 'distances': [[0.46567865172602374]],\n",
        " 'metadatas': [[{'source': 'titanic_small'}]],\n",
        " 'embeddings': None,\n",
-       " 'documents': [['Survived: 0,\\nPclass: 3,\\nName: Mr. Owen Harris Braund,\\nSex: male,\\nAge: 22,\\nSiblings/Spouses Aboard: 1,\\nParents/Children Aboard: 0,\\nFare: 7.25,\\n']],\n",
+       " 'documents': [['Survived: 0,\\nPclass: 3,\\nName: Mr. Anders Johan Andersson,\\nSex: male,\\nAge: 39,\\nSiblings/Spouses Aboard: 1,\\nParents/Children Aboard: 5,\\nFare: 31.275,\\n']],\n",
        " 'uris': None,\n",
        " 'data': None}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,16 +490,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'According to the search results, Owen Harris is a male passenger who did not survive the Titanic disaster. He was in third class, 22 years old, and traveling alone. His full name is Mr. Owen Harris Braund. His record shows that he had one sibling or spouse aboard and no parents or children. The fare he paid for his ticket was 7.25.'"
+       "'Based on the search results, we can see that the age of one of the passengers in the dataset is 39 years old. However, this information does not necessarily represent the average age of survivors. To calculate the average age of survivors, we would need more data from the database.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "4    male   35                        0                        0   8.0500  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
