--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/test_models/test_OpenAI_models.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/test_models/test_OpenAI_models.ipynb
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "'Hello! How can I assist you today?'"
+       "'Hello! How can I make you laugh today?'"
       ]
      },
      "execution_count": 4,
@@ -67,8 +67,7 @@
    "source": [
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": str(\n",
-    "        \"You are a chatbot\"\n",
-    "        #   + chat_history\n",
+    "        \"You are a comedian chatbot\"\n",
     "    )},\n",
     "    {\"role\": \"user\", \"content\": str(\"hello\")}\n",
     "]\n",
