polishing explore in knowledge graph with movie

--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/4_AzureOpenAI_Langchain_Q_A_with_GraphDB_using_LLM_Agent.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/4_AzureOpenAI_Langchain_Q_A_with_GraphDB_using_LLM_Agent.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,18 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"gpt-35-turbo-1106\"\n",
+    "# model_name = \"gpt-35-turbo-1106\"\n",
+    "model_name = \"gpt-35-turbo\"\n",
     "azure_openai_api_key = os.environ[\"OPENAI_API_KEY\"]\n",
     "azure_openai_endpoint = os.environ[\"OPENAI_API_BASE\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,19 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "NEO4J_URI = \"bolt://localhost:7687\"\n",
     "NEO4J_USERNAME = \"neo4j\"\n",
-    "NEO4J_PASSWORD = \"moviesampleproject\"\n",
+    "NEO4J_PASSWORD = \"12345678\"\n",
     "NEO4J_DATABASE = 'neo4j'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +109,7 @@
      "output_type": "stream",
      "text": [
       "Node properties are the following:\n",
-      "Movie {tagline: STRING, title: STRING, taglineEmbedding: LIST, imdbRating: FLOAT, id: STRING, released: DATE},Person {name: STRING},Genre {name: STRING}\n",
+      "Movie {title: STRING, taglineEmbedding: LIST, tagline: STRING, imdbRating: FLOAT, id: STRING, released: DATE},Person {name: STRING},Genre {name: STRING}\n",
       "Relationship properties are the following:\n",
       "\n",
       "The relationships are the following:\n",
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
-      "\u001b[32;1m\u001b[1;3mMATCH (:Movie {title: \"Casino\"})<-[:ACTED_IN]-(actor:Person)\n",
+      "\u001b[32;1m\u001b[1;3mMATCH (:Movie {title: 'Casino'})<-[:ACTED_IN]-(actor:Person)\n",
       "RETURN actor.name\u001b[0m\n",
       "Full Context:\n",
       "\u001b[32;1m\u001b[1;3m[{'actor.name': 'Joe Pesci'}, {'actor.name': 'James Woods'}, {'actor.name': 'Robert De Niro'}, {'actor.name': 'Sharon Stone'}]\u001b[0m\n",
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -208,15 +209,15 @@
       "\n",
       "\u001b[1m> Entering new GraphCypherQAChain chain...\u001b[0m\n",
       "Generated Cypher:\n",
-      "\u001b[32;1m\u001b[1;3mMATCH (m:Movie {title: \"Casino\"})<-[:ACTED_IN]-(p:Person)\n",
-      "RETURN p.name\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mMATCH (:Movie {title: 'Casino'})<-[:ACTED_IN]-(actor:Person)\n",
+      "RETURN actor.name\u001b[0m\n",
       "Full Context:\n",
-      "\u001b[32;1m\u001b[1;3m[{'p.name': 'Joe Pesci'}, {'p.name': 'James Woods'}, {'p.name': 'Robert De Niro'}, {'p.name': 'Sharon Stone'}]\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m[{'actor.name': 'Joe Pesci'}, {'actor.name': 'James Woods'}, {'actor.name': 'Robert De Niro'}, {'actor.name': 'Sharon Stone'}]\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n",
-      "{'query': 'What was the cast of the Casino?', 'result': 'Joe Pesci, James Woods, Robert De Niro, Sharon Stone'}\n",
+      "{'query': 'What was the cast of the Casino?', 'result': 'The cast of Casino included Joe Pesci, James Woods, Robert De Niro, and Sharon Stone.'}\n",
       "\n",
-      " Joe Pesci, James Woods, Robert De Niro, Sharon Stone\n"
+      " The cast of Casino included Joe Pesci, James Woods, Robert De Niro, and Sharon Stone.\n"
      ]
     }
    ],
@@ -249,18 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\froozitalab\\AppData\\Local\\anaconda3\\envs\\playaround\\Lib\\site-packages\\langchain_core\\_api\\deprecation.py:117: LangChainDeprecationWarning: The function `create_structured_output_chain` was deprecated in LangChain 0.1.1 and will be removed in 0.2.0. Use create_structured_output_runnable instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List, Optional\n",
     "\n",
@@ -297,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +299,7 @@
        " 'function': Entities(names=['Casino'])}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +327,7 @@
        "'Casino maps to Casino Movie in database\\n'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,16 +403,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'MATCH (p:Person)-[:ACTED_IN]->(:Movie {title: \"Casino\"})\\nRETURN p.name'"
+       "\"MATCH (:Movie {title: 'Casino'})<-[:ACTED_IN]-(actor)\\nRETURN actor.name\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,16 +476,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Sharon Stone, Joe Pesci, James Woods, and Robert De Niro played in the movie \"Casino\".'"
+       "'Joe Pesci, James Woods, Robert De Niro, and Sharon Stone played in the movie \"Casino\".'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
