--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/5_AzureOpenAI_GraphDB_RAG.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/5_AzureOpenAI_GraphDB_RAG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,19 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "NEO4J_URI = \"bolt://localhost:7687\"\n",
     "NEO4J_USERNAME = \"neo4j\"\n",
-    "NEO4J_PASSWORD = \"moviesampleproject\"\n",
+    "NEO4J_PASSWORD = \"12345678\"\n",
     "NEO4J_DATABASE = 'neo4j'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,25 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-0.004219826776534319,\n",
-       " -0.03029683791100979,\n",
-       " 0.0007639749674126506,\n",
-       " -0.02761838585138321,\n",
-       " -0.007965870201587677,\n",
-       " 0.0019409307278692722,\n",
-       " -0.006576106883585453,\n",
-       " -0.021617135033011436,\n",
-       " -0.002027790993452072,\n",
-       " -0.008066943846642971]"
+       "[-0.004169964697211981,\n",
+       " -0.030407307669520378,\n",
+       " 0.0007921198266558349,\n",
+       " -0.02763153612613678,\n",
+       " -0.007961414754390717,\n",
+       " 0.0019603881519287825,\n",
+       " -0.00657983822748065,\n",
+       " -0.02148698829114437,\n",
+       " -0.00205501657910645,\n",
+       " -0.007980341091752052]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -137,22 +137,22 @@
       "text/plain": [
        "[{'movie.title': 'Heat',\n",
        "  'movie.tagline': 'A Los Angeles crime saga',\n",
-       "  'score': 0.8910084962844849},\n",
+       "  'score': 0.8907766342163086},\n",
        " {'movie.title': 'Grumpier Old Men',\n",
        "  'movie.tagline': 'Still Yelling. Still Fighting. Still Ready for Love.',\n",
-       "  'score': 0.8878611922264099},\n",
+       "  'score': 0.887347400188446},\n",
        " {'movie.title': 'Tom and Huck',\n",
        "  'movie.tagline': 'The Original Bad Boys.',\n",
-       "  'score': 0.8836773633956909},\n",
+       "  'score': 0.8832508325576782},\n",
        " {'movie.title': 'Sense and Sensibility',\n",
        "  'movie.tagline': 'Lose your heart and come to your senses.',\n",
-       "  'score': 0.8762467503547668},\n",
+       "  'score': 0.8757961988449097},\n",
        " {'movie.title': 'Balto',\n",
        "  'movie.tagline': 'Part Dog. Part Wolf. All Hero.',\n",
-       "  'score': 0.8755828142166138}]"
+       "  'score': 0.8753572702407837}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,25 +175,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.010790598578751087,\n",
-       " -0.035882920026779175,\n",
-       " -0.018095795065164566,\n",
-       " -0.019574841484427452,\n",
-       " -0.006266649812459946,\n",
-       " 0.024024836719036102,\n",
-       " -0.019510533660650253,\n",
-       " -0.03385084122419357,\n",
-       " 0.008649198338389397,\n",
-       " -0.009723113849759102]"
+       "[0.010714428499341011,\n",
+       " -0.036056939512491226,\n",
+       " -0.01811829023063183,\n",
+       " -0.019606761634349823,\n",
+       " -0.0062810927629470825,\n",
+       " 0.023982355371117592,\n",
+       " -0.019516941159963608,\n",
+       " -0.03374724090099335,\n",
+       " 0.008744769729673862,\n",
+       " -0.00961090624332428]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -214,22 +214,22 @@
       "text/plain": [
        "[{'movie.title': 'Toy Story',\n",
        "  'movie.tagline': 'The adventure takes off!',\n",
-       "  'score': 0.9303785562515259},\n",
+       "  'score': 0.9301033020019531},\n",
        " {'movie.title': 'Cutthroat Island',\n",
        "  'movie.tagline': 'The Course Has Been Set. There Is No Turning Back. Prepare Your Weapons. Summon Your Courage. Discover the Adventure of a Lifetime!',\n",
-       "  'score': 0.8933806419372559},\n",
+       "  'score': 0.8929015398025513},\n",
        " {'movie.title': 'Tom and Huck',\n",
        "  'movie.tagline': 'The Original Bad Boys.',\n",
-       "  'score': 0.8925687670707703},\n",
+       "  'score': 0.8922421932220459},\n",
        " {'movie.title': 'Jumanji',\n",
        "  'movie.tagline': 'Roll the dice and unleash the excitement!',\n",
-       "  'score': 0.8908366560935974},\n",
+       "  'score': 0.8902815580368042},\n",
        " {'movie.title': 'Heat',\n",
        "  'movie.tagline': 'A Los Angeles crime saga',\n",
-       "  'score': 0.8869895935058594}]"
+       "  'score': 0.8866440653800964}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
