--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/test_gpt_and_embedding_model.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/test_gpt_and_embedding_model.ipynb
@@ -33,6 +33,7 @@
    "outputs": [],
    "source": [
     "model_name = \"gpt-35-turbo-1106\"\n",
+    "model_name = \"gpt-35-turbo\"\n",
     "azure_openai_api_key = os.environ[\"OPENAI_API_KEY\"]\n",
     "azure_openai_endpoint = os.environ[\"OPENAI_API_BASE\"]"
    ]
