update knowledge graph project - add comments and extra infor for YouTube video

--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/1_load_and_save_movie_data.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/1_load_and_save_movie_data.ipynb
@@ -160,12 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate some taglines using chatgot:\n",
-    "\n",
     "taglines = [\"The adventure takes off!\",\n",
     "\"Roll the dice and unleash the excitement!\",\n",
     "\"Still Yelling. Still Fighting. Still Ready for Love.\",\n",
@@ -190,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,11 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(here(\"data/movie_csv/movie.csv\"), sep=\",\")"
+    "df.to_csv(here(\"data/movie_csv/movie.csv\"), sep=\",\", index=False)"
    ]
   }
  ],
@@ -230,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
