--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/3_query_movieDB_with_cypher.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/3_query_movieDB_with_cypher.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Knowledge Graphs for RAG:**  www.deeplearning.ai\n",
+    "**Extra resource: Knowledge Graphs for RAG (`www.deeplearning.ai`)**\n",
     "\n",
     "**Start the Movie Neo4j DB**"
    ]
