--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/4_AzureOpenAI_Langchain_Q_A_with_GraphDB_using_LLM_Agent.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/4_AzureOpenAI_Langchain_Q_A_with_GraphDB_using_LLM_Agent.ipynb
@@ -57,6 +57,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Load the LLM (e.g: GPT 3.5)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -73,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Add Neo4j credentials**"
+    "**Add Neo4j credentials (These information need to be kept secret)**"
    ]
   },
   {
@@ -97,6 +104,13 @@
     "from langchain_community.graphs import Neo4jGraph\n",
     "\n",
     "graph = Neo4jGraph(url=NEO4J_URI, username=NEO4J_USERNAME, password=NEO4J_PASSWORD, database=NEO4J_DATABASE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Print the graph database schema**"
    ]
   },
   {
@@ -184,7 +198,7 @@
     "chain = GraphCypherQAChain.from_llm(graph=graph, llm=llm, verbose=True)\n",
     "response = chain.invoke({\"query\": \"What was the cast of the Casino?\"})\n",
     "print(response)\n",
-    "print(\"\\n\", response[\"result\"])"
+    "print(\"\\nLLM response:\", response[\"result\"])"
    ]
   },
   {
@@ -227,14 +241,21 @@
     ")\n",
     "response = chain.invoke({\"query\": \"What was the cast of the Casino?\"})\n",
     "print(response)\n",
-    "print(\"\\n\", response[\"result\"])"
+    "print(\"\\nLLM response:\", response[\"result\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strategies to improve graph database query generation by mapping values from user inputs to database\n",
+    "----------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Strategies to improve graph database query generation by mapping values from user inputs to database**\n",
     "\n",
     "When using the built-in graph chains, the LLM is aware of the graph schema, but has no information about the values of properties stored in the database. Therefore, we can introduce a new step in graph database QA system to accurately map values."
    ]
