--- a/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/5_AzureOpenAI_GraphDB_RAG.ipynb
+++ b/KnowledgeGraph-Q&A-and-RAG-with-TabularData/explore/Movie_RAG_GraphDB/5_AzureOpenAI_GraphDB_RAG.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.graphs import Neo4jGraph\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "from typing import List\n",
+    "from openai import AzureOpenAI\n",
+    "import os\n",
     "load_dotenv()\n",
     "# Warning control\n",
     "import warnings\n",
@@ -16,8 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Load the environment variables from your `.env` file**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +36,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Load the Azure openAI instance**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openai import AzureOpenAI\n",
-    "\n",
     "client = AzureOpenAI(\n",
     "  api_key = azure_openai_api_key,  \n",
     "  api_version = \"2023-07-01-preview\",\n",
     "  azure_endpoint = azure_openai_endpoint\n",
     ")\n",
+    "\n",
     "def embed_text(text):\n",
     "    response = client.embeddings.create(\n",
     "    input = text,\n",
@@ -48,11 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def embed_text(text):\n",
+    "def embed_text(text:str)->List:\n",
+    "    \"\"\"\n",
+    "    Embeds the given text using the specified model.\n",
+    "\n",
+    "    Parameters:\n",
+    "        text (str): The text to be embedded.\n",
+    "\n",
+    "    Returns:\n",
+    "        List: A list containing the embedding of the text.\n",
+    "    \"\"\"\n",
     "    response = client.embeddings.create(\n",
     "    input = text,\n",
     "    model= \"text-embedding-ada-002\"\n",
@@ -61,8 +86,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Add Neo4j credentials (These information need to be kept secret)**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +114,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sample question for RAG:**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,26 +130,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Get the questions embedding:**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-0.004169964697211981,\n",
-       " -0.030407307669520378,\n",
-       " 0.0007921198266558349,\n",
-       " -0.02763153612613678,\n",
-       " -0.007961414754390717,\n",
-       " 0.0019603881519287825,\n",
-       " -0.00657983822748065,\n",
-       " -0.02148698829114437,\n",
-       " -0.00205501657910645,\n",
-       " -0.007980341091752052]"
+       "[-0.004219826776534319,\n",
+       " -0.03029683791100979,\n",
+       " 0.0007639749674126506,\n",
+       " -0.02761838585138321,\n",
+       " -0.007965870201587677,\n",
+       " 0.0019409307278692722,\n",
+       " -0.006576106883585453,\n",
+       " -0.021617135033011436,\n",
+       " -0.002027790993452072,\n",
+       " -0.008066943846642971]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,12 +170,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Perform similarity search**"
+    "**Perform Similarity Search using the question's embedding on the vector index of the graph database and get the results**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -137,105 +183,118 @@
       "text/plain": [
        "[{'movie.title': 'Heat',\n",
        "  'movie.tagline': 'A Los Angeles crime saga',\n",
-       "  'score': 0.8907766342163086},\n",
+       "  'score': 0.8910084962844849},\n",
        " {'movie.title': 'Grumpier Old Men',\n",
        "  'movie.tagline': 'Still Yelling. Still Fighting. Still Ready for Love.',\n",
-       "  'score': 0.887347400188446},\n",
+       "  'score': 0.8878611922264099},\n",
        " {'movie.title': 'Tom and Huck',\n",
        "  'movie.tagline': 'The Original Bad Boys.',\n",
-       "  'score': 0.8832508325576782},\n",
+       "  'score': 0.8836773633956909},\n",
        " {'movie.title': 'Sense and Sensibility',\n",
        "  'movie.tagline': 'Lose your heart and come to your senses.',\n",
-       "  'score': 0.8757961988449097},\n",
+       "  'score': 0.8762467503547668},\n",
        " {'movie.title': 'Balto',\n",
        "  'movie.tagline': 'Part Dog. Part Wolf. All Hero.',\n",
-       "  'score': 0.8753572702407837}]"
+       "  'score': 0.8755828142166138}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "graph.query(\"\"\"\n",
-    "    with $question_embedding as question_embedding\n",
-    "    CALL db.index.vector.queryNodes(\n",
-    "        'movie_tagline_embeddings', \n",
-    "        $top_k, \n",
-    "        question_embedding\n",
-    "        ) YIELD node AS movie, score\n",
-    "    RETURN movie.title, movie.tagline, score\n",
+    "result = graph.query(\"\"\"\n",
+    "    with $question_embedding as question_embedding      // Use the provided question embedding as 'question_embedding'\n",
+    "    CALL db.index.vector.queryNodes(                    // Call the vector index query function\n",
+    "        'movie_tagline_embeddings',                     // Name of the vector index to query against\n",
+    "        $top_k,                                         // Number of top results to retrieve\n",
+    "        question_embedding                              // The question embedding to compare against\n",
+    "        ) YIELD node AS movie, score                    // Yield each matched node and its similarity score\n",
+    "    RETURN movie.title, movie.tagline, score            // Return the title, tagline, and similarity score of each movie\n",
     "    \"\"\",\n",
     "    params={\n",
-    "        \"question_embedding\": question_embedding,\n",
-    "        \"top_k\": 5\n",
-    "    })"
+    "        \"question_embedding\": question_embedding,       # Pass the question embedding as a parameter\n",
+    "        \"top_k\": 5                                      # Specify the number of top results to retrieve\n",
+    "    })\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pass the results to an LLM for the final answer**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[0.010714428499341011,\n",
-       " -0.036056939512491226,\n",
-       " -0.01811829023063183,\n",
-       " -0.019606761634349823,\n",
-       " -0.0062810927629470825,\n",
-       " 0.023982355371117592,\n",
-       " -0.019516941159963608,\n",
-       " -0.03374724090099335,\n",
-       " 0.008744769729673862,\n",
-       " -0.00961090624332428]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the search results, the movies that are about love are:\n",
+      "\n",
+      "1. Heat - \"A Los Angeles crime saga\"\n",
+      "2. Grumpier Old Men - \"Still Yelling. Still Fighting. Still Ready for Love.\"\n",
+      "3. Tom and Huck - \"The Original Bad Boys.\"\n",
+      "4. Sense and Sensibility - \"Lose your heart and come to your senses.\"\n",
+      "5. Balto - \"Part Dog. Part Wolf. All Hero.\"\n",
+      "\n",
+      "These movies explore different aspects of love and relationships.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"# Question:\\n{question}\\n\\n# Graph DB search results:\\n{result}\"\n",
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": str(\n",
+    "        \"You will be given the user question along with the search result of that question over a Neo4j graph database. Give the user the proper answer.\"\n",
+    "    )},\n",
+    "    {\"role\": \"user\", \"content\": prompt}\n",
+    "]\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    model=os.getenv(\"gpt_deployment_name\"),\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Second example (in one go):**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The movies about adventure are:\n",
+      "1. Toy Story - The adventure takes off!\n",
+      "2. Cutthroat Island - The Course Has Been Set. There Is No Turning Back. Prepare Your Weapons. Summon Your Courage. Discover the Adventure of a Lifetime!\n",
+      "3. Tom and Huck - The Original Bad Boys.\n",
+      "4. Jumanji - Roll the dice and unleash the excitement!\n",
+      "\n",
+      "Is there anything else I can help with?\n"
+     ]
     }
    ],
    "source": [
     "question = \"What movies are about adventure?\"\n",
     "question_embedding = embed_text(question)\n",
-    "question_embedding[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'movie.title': 'Toy Story',\n",
-       "  'movie.tagline': 'The adventure takes off!',\n",
-       "  'score': 0.9301033020019531},\n",
-       " {'movie.title': 'Cutthroat Island',\n",
-       "  'movie.tagline': 'The Course Has Been Set. There Is No Turning Back. Prepare Your Weapons. Summon Your Courage. Discover the Adventure of a Lifetime!',\n",
-       "  'score': 0.8929015398025513},\n",
-       " {'movie.title': 'Tom and Huck',\n",
-       "  'movie.tagline': 'The Original Bad Boys.',\n",
-       "  'score': 0.8922421932220459},\n",
-       " {'movie.title': 'Jumanji',\n",
-       "  'movie.tagline': 'Roll the dice and unleash the excitement!',\n",
-       "  'score': 0.8902815580368042},\n",
-       " {'movie.title': 'Heat',\n",
-       "  'movie.tagline': 'A Los Angeles crime saga',\n",
-       "  'score': 0.8866440653800964}]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "graph.query(\"\"\"\n",
+    "result = graph.query(\"\"\"\n",
     "    with $question_embedding as question_embedding\n",
     "    CALL db.index.vector.queryNodes(\n",
     "        'movie_tagline_embeddings', \n",
@@ -247,7 +306,22 @@
     "    params={\n",
     "        \"question_embedding\": question_embedding,\n",
     "        \"top_k\": 5\n",
-    "    })"
+    "    })\n",
+    "\n",
+    "prompt = f\"# Question:\\n{question}\\n\\n# Graph DB search results:\\n{result}\"\n",
+    "messages = [\n",
+    "    {\"role\": \"system\", \"content\": str(\n",
+    "        \"You will be given the user question along with the search result of that question over a Neo4j graph database. Give the user the proper answer.\"\n",
+    "    )},\n",
+    "    {\"role\": \"user\", \"content\": prompt}\n",
+    "]\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    model=os.getenv(\"gpt_deployment_name\"),\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "print(response.choices[0].message.content)"
    ]
   }
  ],
@@ -267,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
